--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,36 +5,33 @@
 
 .btn {
     color: #28a745;
-      background: #FFF;
-      padding: 3px 6px;
-      margin: 3px;
-      border: 3px solid #28a745;
-      font-weight: bold;
-      border-radius: 1px;
-      display: inline-block;
-      text-align: center;
-      box-shadow: inset 0 0 0 0 #28a745;
-      -webkit-transition: all ease 0.8s;
-      -moz-transition: all ease 0.8s;
-      transition: all ease 0.8s;
-  }
-  .btn:hover {
-      box-shadow: inset 170px 0 0 0 #28a745;
-      color: #fff;
-  }
+    background: #FFF;
+    padding: 3px 6px;
+    margin: 3px;
+    border: 3px solid #28a745;
+    font-weight: bold;
+    border-radius: 1px;
+    display: inline-block;
+    text-align: center;
+    box-shadow: inset 0 0 0 0 #28a745;
+    -webkit-transition: all ease 0.8s;
+    -moz-transition: all ease 0.8s;
+    transition: all ease 0.8s;
+}
+
+.btn:hover {
+    box-shadow: inset 170px 0 0 0 #28a745;
+    color: #fff;
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Home screen / Hero image */
 
 #section-hero-image {
-    background: url(../images/hero-img.png);
-    background-position: center;
-    background-repeat: no-repeat;
+    background-image: url(../images/hero-img.png) no-repeat center center fixed;
     background-size: cover;
-    position: relative;
-    position: fixed;
-    min-height: 100%;
-    width: 100%;
-}
+    height: 100%;
+    overflow: hidden;
+  }
 
 
 
