Added testimonial css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,10 +91,21 @@
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Testimonials */
 
-.testimonials {
-    padding: 5rem;
+  .testimonials {
+    margin: 5rem;
   }
-
+  
+  .hr-testimonials {
+  
+  }
+  
+  .fa-star {
+    color: goldenrod;
+  }
+  
+  .fa-star-half-alt {
+    color: goldenrod;
+  }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   */
