Added basic contact form CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,9 +109,25 @@
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   */
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   */
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~   */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Contact form  */
 
-
+.contact-form-p {
+    font-style: italic;
+    padding-top: 20px;
+    padding-bottom: 10px;
+  }
+  
+  ::placeholder {
+    font-style: italic;
+  }
+  
+  #btn-contact {
+    margin-bottom: 50px;
+  }
+  
+  .text-muted-form {
+    padding: 10px;
+  }
 
 
 
