--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,14 @@
   position: absolute;
 }
 
+.callout-position {
+  position: relative;
+  align-self: flex-end;
+}
+
 .opaque {
   background-color: rgba(0, 0, 0, 0.5);
 }
-
-
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ About us */
 
