--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,8 +113,8 @@
 .container-center{
   justify-content: center;
   }
-  
-  .callout {;
+
+  .callout {
     padding: 32px;
   }
   
@@ -191,11 +191,17 @@
 
 #classes {}
 
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Schedule */
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Timetable */
 
-#schedule {}
+.schedule-container {
+  margin-top: 100px;
+}
 
+.timetable-classes {
+  margin-top: 50px;
+}
 
+#timetable {}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Contact form  */
 
