--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,21 +32,61 @@
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Home screen / Hero image */
 
-#home 
+#home {}
 
-#section-hero-image {
-  background-image: url("../images/hero-img.png");
-  background-position: center;
-  background-repeat: no-repeat;
+.position-top {
+  display: flex;
+}
+
+.hero-image {}
+
+.callout-container {
+  background: url("../images/hero-img.png") rgba(0, 0, 0, 0) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   position: relative;
   height: 100vh;
-  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.hero-text {
-  text-align: center;
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Callout */
+
+.callout {
+  max-width: 400px;
 }
+
+.callout-devider {
+  margin-top: 25vh;
+  margin-bottom: 15vh;
+  color: rgba(0, 0, 0, 0);
+}
+
+.opaque {
+  background-color: rgba(0, 0, 0, 0);
+  color: #FFF;
+
+}
+
+.h1header {
+  color: #FFF;
+  margin-top: 5vh;
+
+  font-size: 6rem;
+}
+
+.h2header {
+  color: #FFF;
+}
+
+.p-header {
+  color: #FFF;
+}
+
+.btn-joinus {}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sign IN modal */
 .modal-signin {
@@ -106,35 +146,6 @@
   background: #bb0000;
   color: white;
 }
-
-
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Callout  */
-
-.container-center{
-  justify-content: center;
-  }
-
-  .callout {
-    padding: 32px;
-  }
-  
-  .callout-container {
-    height: 85vh;
-    display: flex;
-    justify-content: center;
-    position: absolute;
-    margin-left: -1em;
-  }
-  
-  .callout-position {
-    position: relative;
-    align-self: flex-end;
-  }
-  
-  .opaque {
-    background-color: rgba(0, 0, 0, 0);
-    color: #FFF
-  }
   
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ About us */
 
