Added muted text to signin modal, changed text and removed link

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,9 @@
   text-align: center;
 }
 
+.text-muted-signin {
+  margin: 10px 0px;}
+
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sign UP modal */
 
 .modal-signup {
