--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,59 +34,54 @@
 
 #home {}
 
-.position-top {
-  display: flex;
-}
-
 .hero-image {}
 
 .callout-container {
-  background: url("../images/hero-img.png") rgba(0, 0, 0, 0) no-repeat center center fixed;
+  background: url("../images/hero-img.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   position: relative;
   height: 100vh;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Callout */
 
-.callout {
-  max-width: 400px;
+.row-height {
+  height: 33vh;
+  justify-content: center;
 }
 
-.callout-devider {
-  margin-top: 25vh;
-  margin-bottom: 15vh;
-  color: rgba(0, 0, 0, 0);
-}
-
-.opaque {
-  background-color: rgba(0, 0, 0, 0);
+.row-height-dream {
+  height: 8.3vh;
   color: #FFF;
-
+  font-size: 3.5rem;
+  justify-content: center;
 }
 
-.h1header {
-  color: #FFF;
-  margin-top: 5vh;
-
-  font-size: 6rem;
+.big-size {
+  letter-spacing: 2rem;
 }
 
-.h2header {
+.callout-smaller {
+  max-width: 300px;
+}
+
+.h1-header {
   color: #FFF;
+  text-align: center;
+  font-size: 2.5rem;
+  height: 10vh;
+  margin: 25px 0px;
 }
 
 .p-header {
   color: #FFF;
+  margin: 25px;
 }
-
-.btn-joinus {}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sign IN modal */
 .modal-signin {
