--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,10 +32,6 @@
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Home screen / Hero image */
 
-#home {}
-
-.hero-image {}
-
 .callout-container {
   background: url("../images/hero-img.png") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -55,15 +51,17 @@
 }
 
 .row-height-dream {
-  height: 11vh;
+  height: 11.5vh;
   color: #FFF;
-  font-size: 5rem;
+  font-size: 4rem;
   justify-content: center;
 }
 
-.big-size {
-  font-size: 6rem;
-  letter-spacing: 1rem;
+.row-height-dream.big {
+  font-size: 4rem;
+  letter-spacing: 1.8rem;
+  margin: 0;
+  padding: 0;
 }
 
 .callout-smaller {
@@ -75,12 +73,12 @@
   text-align: center;
   font-size: 2.5rem;
   height: 10vh;
-  margin: 25px 0px;
+  margin: 10px 0px;
 }
 
 .p-header {
   color: #FFF;
-  margin: 25px;
+  margin: 10px;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sticky socials */
@@ -204,6 +202,7 @@
 
 ::placeholder {
   font-style: italic;
+  text-align: center;
 }
 
 #btn-contact {
