Placed callout higher - with small device it  fell of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@
   justify-content: center;
 }
 
+.row-height-smaller{
+  height: 25vh;
+}
+
 .row-height-dream {
   height: 11.5vh;
   color: #FFF;
