--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Fonts */
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
@@ -5,6 +7,15 @@ body {
 
  h1, h2, h3, h4, h5, h6 {
   font-family: 'Abril Fatface', serif;
+ }
+
+/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Section spacing */
+
+.hr-container {
+  width: 20vw;
+  border: 4px solid #77b950;
+  margin-top: 100px;
+  margin-bottom: 100px;
  }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Navigation bar */
@@ -60,21 +71,14 @@ body {
 }
 
 .row-height-smaller{
-  height: 25vh;
+  height: 20vh;
 }
 
 .row-height-dream {
   height: 9.1vh;
   color: #FFF;
-  font-size: 4rem;
+  font-size: 5rem;
   justify-content: center;
-}
-
-.row-height-dream.big {
-  font-size: 4rem;
-  letter-spacing: 1.8rem;
-  margin: 0;
-  padding: 0;
 }
 
 .callout-smaller {
@@ -145,17 +149,9 @@ body {
   margin-top: 50px;
 }
 
-#about-us{}
-
-
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Testimonials */
 
-.testemonials-container {
-  margin-top: 100px;
-}
-
 .testimonial {
-  margin-top: 50px;
 }
 
 #testimonials {
@@ -175,37 +171,29 @@ body {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Classes */
 
 .classes-container {
-  margin-top: 100px;
+
 }
 
 .class-title {
-  margin-top: 50px;
+
 }
 
 .classes-class {
-  margin-top: 50px;
+
 }
 
-
-
-#classes {}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Timetable */
 
 .schedule-container {
-  margin-top: 100px;
 }
 
 .timetable-classes {
-  margin-top: 50px;
 }
-
-#timetable {}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Contact form  */
 
 .contact-container {
-  margin-top: 100px;
 }
 
 #contact .contact-form-p {
