--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ nav {
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sticky socials */
-/*
+
 .social-buttons-side {
   position: fixed !important;
 	z-index: 10000;
@@ -185,9 +185,6 @@ nav {
 
 .class-title {
   margin-bottom: 20px;
-}
-
-.classes-class {
 }
 
 
@@ -313,4 +310,12 @@ nav {
 #youtube-footer {
   background: #bb0000;
   color: white;
+}
+
+.footer-bottom-p {
+  text-align: center;
+  color: #ffbe0a;
+  background-color: #94001e;
+  margin-bottom: 0;
+  padding: 10px;
 }
