Debugged HTML with w3 validation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ nav {
   text-align: left;
 }
 
-#logo-footer {
+#logo-nav {
   position: relative;
   text-align: center;
   justify-content: center;
