--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,11 +3,16 @@
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
- }
+}
 
- h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Abril Fatface', serif;
- }
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Section spacing */
 
@@ -16,7 +21,7 @@ body {
   border: 4px solid #77b950;
   margin-top: 100px;
   margin-bottom: 100px;
- }
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Navigation bar */
 nav {
@@ -39,10 +44,10 @@ nav {
   border-radius: 1px;
   display: inline-block;
   text-align: center;
-  box-shadow: inset 0 0 0 0 #94001e; 
-  -webkit-transition: all ease 1.2s;
-  -moz-transition: all ease 1.2;
-  transition: all ease 1.2;
+  box-shadow: inset 0 0 0 0 #94001e;
+	-webkit-transition: all ease 1.2s;
+	-moz-transition: all ease 1.2s;
+	transition: all ease 1.2s;
 }
 
 .btn-slide-red:hover {
@@ -74,7 +79,7 @@ nav {
   justify-content: center;
 }
 
-.row-height-smaller{
+.row-height-smaller {
   height: 25vh;
 }
 
@@ -128,7 +133,7 @@ nav {
 }
 
 .socials-side a:hover {
-    background-color: #ffbe0a;
+  background-color: #ffbe0a;
 }
 
 .facebook {
@@ -157,7 +162,7 @@ nav {
   margin-top: 100px;
 }
 
-.aboutus-p{
+.aboutus-p {
   margin-top: 50px;
 }
 
@@ -170,8 +175,6 @@ nav {
 #testimonials {
   margin: 5rem;
 }
-
-.hr-testimonial {}
 
 .fa-star {
   color: goldenrod;
@@ -193,14 +196,13 @@ nav {
 
 
 @media screen and (max-width: 768px) {
-.classes-container #classes .row .col-6 .class-title {
-  padding: 30px;
-  border-radius: 50%;
-  background: #94001e;
-  color: #FFF;
+  .classes-container #classes .row .col-6 .class-title {
+    padding: 30px;
+    border-radius: 50%;
+    background: #94001e;
+    color: #FFF;
+  }
 }
-}
-
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Timetable */
 
@@ -208,13 +210,7 @@ nav {
   margin-bottom: 40px;
 }
 
-.timetable-classes {
-}
-
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Contact form  */
-
-.contact-container {
-}
 
 #contact .contact-form-p {
   font-style: italic;
@@ -245,7 +241,8 @@ nav {
 }
 
 .text-muted-signin {
-  margin: 10px 0px;}
+  margin: 10px 0px;
+}
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Sign UP modal */
 
@@ -261,7 +258,6 @@ nav {
 
 .footer-container {
   background-color: #94001e;
-  font-size: ;
   color: #FFF;
   padding: 25px;
 }
